# sot-universal-robot

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: controller.yaml  sot_params.yaml  sot_params_common.yaml  sot_params_franka_panda.yaml  sot_params_simu.yaml  sot_params_ur.yaml
launch/: controller.launch  sot_params.launch
src/: CMakeLists.txt  controller.cc  controller.hh  device-python.cc  device.cc  device.hh
src/dynamic_graph/sot/robot_arm/: __init__.py  franka.py  prologue.py  robot_arm.py  universal_robot.py
src/dynamic_graph/sot/universal_robot/: __init__.py  prologue.py  universal_robot.py
tests/: test_device.py
urdf/: franka.urdf  ur10.urdf
