<?xml version="1.0"?>
<package format="2">
  <name>sot_universal_robot</name>
  <version>0.0.0</version>
  <description>Interface between the Stack of Tasks and ros-control framework
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="florent.lamiraux@laas.fr">Florent Lamiraux</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <url type="repository">http://github.com/stack-of-tasks/sot-universal-robots
  </url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="florent.lamiraux@laas.fr">Florent Lamiraux</author>

  <depend>roscpp</depend>
  <depend>sot-dynamic-pinocchio</depend>
  <depend>ur_description</depend>
  <depend>dynamic_graph_bridge</depend>
  <depend>dynamic_graph_bridge_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>doxygen</doc_depend>
</package>
